--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,7 @@ body {
     background: #f9f9f9;
     z-index: 101;
     padding: 30px 20px;
-    transition: 0.6s ease-in;
+    transition: 0.5s ease-in;
 }
 
 .side-menu a {
@@ -147,7 +147,7 @@ body {
 }
 
 .side-menu a:hover {
-    background: linear-gradient(to bottom, #f7f7f7, #c5d4ed);
+    background: linear-gradient(to bottom, #f9f9f9, #c5d4edda);
 }
 
 .side-social{
@@ -824,6 +824,11 @@ body {
 
     .hero-text h1 {
         font-size: 30px;
+    }
+
+    .hero-text {
+        max-width: 600px;
+        margin-left: 0;
     }
 
     .hero-text h2 {
