--- a/css/style.css
+++ b/css/style.css
@@ -21,9 +21,12 @@ body {
     margin: 10px auto;
 }
 
+.header{
+    position: sticky;
+}
+
 .header-content {
     display: flex;
-    position: sticky;
     top: 0;
     left: 0;
     width: 100%;
@@ -124,7 +127,7 @@ body {
     justify-content: center;
     align-items: center;
     position: fixed;
-    left: -1250px;
+    left: -2200px;
     top: 0;
     width: 100%;
     height: 100%;
