--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,6 @@
 * {
     font-family: "Quicksand", sans-serif;
     font-weight: 600;
-    font-size: 20px;
     font-style: normal;
     margin: 0;
     padding: 0;
@@ -15,60 +14,93 @@ body {
     background: #0846b23b;
 }
 
+p {
+    font-size: 1.3rem;
+}
+
+
+h1{
+    font-size: 2.5rem;
+}
+
+h2 {
+    font-size: 1.75rem;
+}
+
+h3 {
+    font-size: 1.5rem;
+}
+
 .container {
-    width: 90%;
     max-width: 1200px;
     margin: 10px auto;
 }
 
+.btn {
+    display: inline-block;
+    background: linear-gradient(to bottom right, #49a3ff, #0845b2);
+    color: #fff;
+    padding: 10px 20px;
+    text-decoration: none;
+    font-size: 18px;
+    font-weight: bold;
+    border-radius: 50px;
+    transition: background-color 0.4s ease-in;
+}
+
+.btn:hover {
+    background: linear-gradient(to bottom, #feaa72, #F97316);
+}
+
 .header{
-    position: sticky;
+    background: #1e3b8b;
+    padding: 10px 0;
+    border-bottom: 4px solid #F97316;
 }
 
 .header-content {
     display: flex;
-    top: 0;
-    left: 0;
     width: 100%;
     background: #c5d4ed;
-    padding: 20px 100px;
+    padding: 10px 100px;
+    border-radius: 50px;
     justify-content: space-between;
     align-items: center;
-    
     z-index: 100; 
     
 }
 
 .header-logo img {
-    width: 140px;
-    height: 70px;
+    max-width: 200px;
 }
 
 .header-links ul {
     list-style: none;
     padding: 10px;
+    margin: 0 20px;
     border-radius: 50px;
-    box-shadow: 0 0px 2px rgba(1, 0, 19, 0.178);
 }
 
 .header-links ul li {
     display: inline-block;
     margin: 0 15px;
+    border-radius: 50px;
 }
 
 .header-links ul li a {
     position: relative;
     display: flex;
-    font-size: 1rem;
+    font-size: 1.6rem;
     color: #191c5f;;
+    border-radius: 20px;
+    padding: 4px;
     font-weight: 700;
     text-decoration: none;
     margin-left: 40px;
 }
 
 .header ul{
-    margin: 8px 0 0 0;
-    list-style: none;
+   list-style: none;
 }
 
 .header-links a::before {
@@ -93,8 +125,7 @@ body {
 }
 
 .header-social a img {
-    width: 36px;
-    height: auto;
+    max-width: 50px;
     border-radius: 50px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
@@ -205,45 +236,28 @@ body {
 }
 
 .hero-text h1 {
-    font-size: 3rem;
     text-align: center;
     margin-bottom: 10px;
-    border: 2px solid #191c5f;
-    border-left: 0px;
-    border-right: 0px;
+    font-weight: 800;
+    letter-spacing: 0.7px;
     border-radius: 5px;
     padding: 0px 10px;
-    /* background: linear-gradient(#ffffff, #c4c8cd83);  */
 }
 
 .hero-text h2 {
     font-size: 2rem;
     color: #F97316;
     text-align: center;
+    border: 2px dashed #191c5f;
     margin-bottom: 20px;
 }
 
 .hero-text p {
-    font-size: 1.1rem;
     text-align: center;
     margin-bottom: 20px;
 }
 
-.btn {
-    display: inline-block;
-    background: linear-gradient(to bottom right, #49a3ff, #0845b2);
-    color: #fff;
-    padding: 10px 20px;
-    text-decoration: none;
-    font-size: 18px;
-    font-weight: bold;
-    border-radius: 50px;
-    transition: background-color 0.4s ease-in;
-}
 
-.btn:hover {
-    background: linear-gradient(to bottom, #0845b2, #49a3ff);
-}
 
 .hero-img {
     max-width: 900px;
@@ -258,7 +272,6 @@ body {
 }
 
 .services-title {
-    font-size: 36px;
     margin-bottom: 20px;
     color: #191c5f;
 }
@@ -279,7 +292,7 @@ body {
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     padding: 20px;
-    margin: 10px;
+    margin: 18px;
     min-width: 280px;
     flex: 1 0 30%;
     text-align: center;
@@ -299,12 +312,6 @@ body {
     max-width: 100px;
 }
 
-.service-title {
-    font-size: 24px;
-    margin-bottom: 10px;
-    color: #191c5f;
-}
-
 .service-description {
     color: #191c5f;
     margin-bottom: 15px;
@@ -321,7 +328,7 @@ body {
 }
 
 .view-details img {
-    width: 30px;
+    max-width: 30px;
     height:  auto;
 }
 
@@ -372,7 +379,6 @@ body {
 }
 
 .about-title {
-    font-size: 36px;
     margin-bottom: 20px;
     color: #F97316;
 }
@@ -391,22 +397,20 @@ body {
 
 .about-image img {
     max-width: 100%;
-    border-radius: 10px;
 }
 
 .about-text {
     flex: 1;
-    margin: 10px;
+    margin: 20px;
     text-align: left;
 }
 
 .about-text h3 {
-    font-size: 24px;
     margin-bottom: 10px;
     text-align: center;
     color: #191c5f;
-    border: 1px solid;
-    border-radius: 20px;
+    border-bottom: 3px solid #F97316;
+    font-weight: bolder;
     width: 150px;
 }
 
@@ -430,7 +434,6 @@ body {
 
 
 .values-title {
-    font-size: 36px;
     margin-bottom: 20px;
     color: #191c5f;
 }
@@ -473,7 +476,6 @@ body {
 }
 
 .value-title {
-    font-size: 24px;
     margin-bottom: 10px;
     color: #191c5f;
 }
@@ -491,7 +493,6 @@ body {
 }
 
 .section-title {
-    font-size: 36px;
     margin-bottom: 30px;
 }
 
@@ -557,19 +558,16 @@ body {
 }
 
 .credible-text h2 {
-    font-size: 36px;
     color: #F97316;
     margin-bottom: 10px;
 }
 
 .credible-text h1 {
-    font-size: 36px;
     color: #191c5f;
     margin-bottom: 20px;
 }
 
 .credible-text p {
-    font-size: 18px;
     color: #191c5f;
     margin-bottom: 20px;
 }
@@ -638,65 +636,54 @@ body {
 }
 
 .support-text h1 {
-    font-size: 36px;
     color: #1E3A8A;
     margin-bottom: 20px;
 }
 
 .support-text p {
-    font-size: 18px;
     color: #191c5f;
     margin-bottom: 20px;
 }
 
 /* partner section  */
 .partners-section {
-    background-color: #c5d4ed;
-    padding: 60px 0;
-    text-align: center;
+    background-color: #d1e0ff;
+    padding: 50px 0;
 }
 
-/* .partners-section .container {
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 15px;
-} */
-
 .partners-section h2 {
-    font-size: 2.5rem;
-    margin-bottom: 20px;
+    text-align: center;
     color: #191c5f;
+    margin-bottom: 20px;
 }
 
 .partners-section p {
-    font-size: 1.2rem;
-    margin-bottom: 40px;
     color: #191c5f;
+    text-align: center;
+    margin-bottom: 40px;
 }
 
-.partners-grid {
+.partners-container {
     display: flex;
-    flex-wrap: wrap;
     justify-content: center;
+    flex-wrap: wrap;
     gap: 30px;
 }
 
-.partner-item {
-    width: 300px;
-    height: 300px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+.partner-card {
+    background-color: #fff;
     border-radius: 10px;
-    background-color: #c5d4ed;
-    transition: transform 0.3s, box-shadow 0.3s;
+    box-shadow: 0 2px 4px rgba(121, 162, 165, 0.082);
+    padding: 20px;
+    width: 350px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
-.partner-item img {
+.partner-card img {
     max-width: 100%;
-    max-height: 100%;
-    object-fit: contain;
-    transition: transform 0.3s;
+    height: auto;
 }
 
 .partner-item:hover {
@@ -709,14 +696,14 @@ body {
 
 /* Footer Section Styles */
 .footer-section {
-    background-color: #1F2937;
+    background-color: #1e3b8b;
     color: #ffffff;
     font-family: Arial, sans-serif;
 }
 
 .footer-top {
     padding: 40px 0;
-    border-bottom: 1px solid #333;
+    border-bottom: 1px solid #c5d4ed;
 }
 
 .footer-top .container {
@@ -801,7 +788,7 @@ body {
 }
 
 .footer-bottom {
-    background-color: #111827;
+    background-color: #1E40AF;
     padding: 20px 0;
     text-align: center;
 }
@@ -812,7 +799,7 @@ body {
 }
 
 .footer-bottom p a {
-    color: #9CA3AF;
+    color: #c5d4ed;
     text-decoration: none;
 }
 
@@ -914,6 +901,12 @@ body {
         justify-content: space-between;
     }
 
+    .menu-toggle img {
+        display: block;
+        margin-top: auto;
+        margin-bottom: auto;
+    }
+
 
     .hero-content {
         flex-direction: column;
@@ -952,7 +945,7 @@ body {
 
     .header-content{
         width: 100%;
-        padding: 20px 10px;
+        padding: 10px 10px;
         justify-content: space-between;
     }
 
@@ -961,6 +954,12 @@ body {
         margin-left: 0px;
     }
 
+    .menu-toggle img {
+        display: block;
+        margin-top: auto;
+        margin-bottom: auto;
+        margin-right: 20px;
+    }
     /* .header-logo  img{
         margin-right: 0px;
     } */
