--- a/css/style.css
+++ b/css/style.css
@@ -61,6 +61,7 @@ h3 {
 .header-content {
     display: flex;
     width: 100%;
+    font-size: 1.3rem;
     background: #c5d4ed;
     padding: 10px 100px;
     border-radius: 50px;
@@ -90,7 +91,7 @@ h3 {
 .header-links ul li a {
     position: relative;
     display: flex;
-    font-size: 1.6rem;
+    font-size: 1.3rem;
     color: #191c5f;;
     border-radius: 20px;
     padding: 4px;
@@ -170,10 +171,10 @@ h3 {
 
 .side-menu a {
     display: block;
+    font-size: 1.3rem;
     color: #191c5f;
     text-decoration: none;
     margin: 15px 0;
-    font-size: 1.4rem;
     box-shadow: 1px 1px ;
     padding: 2px 10px;
     border-radius: 30px;
@@ -236,6 +237,7 @@ h3 {
 }
 
 .hero-text h1 {
+    font-size: 2.5rem;
     text-align: center;
     margin-bottom: 10px;
     font-weight: 800;
@@ -245,7 +247,7 @@ h3 {
 }
 
 .hero-text h2 {
-    font-size: 2rem;
+    font-size: 1.75;
     color: #F97316;
     text-align: center;
     border: 2px dashed #191c5f;
@@ -253,6 +255,7 @@ h3 {
 }
 
 .hero-text p {
+    font-size: 1.3rem;
     text-align: center;
     margin-bottom: 20px;
 }
@@ -313,6 +316,7 @@ h3 {
 }
 
 .service-description {
+    font-size: 1.3rem;
     color: #191c5f;
     margin-bottom: 15px;
 }
@@ -321,7 +325,6 @@ h3 {
     color: #191c5f;
     text-decoration: none;
     padding: 5px;
-    border: 1.5px dashed #feaa72;
     border-radius: 20px;
     font-weight: bold;
     transition: color 0.3s;
@@ -407,6 +410,7 @@ h3 {
 
 .about-text h3 {
     margin-bottom: 10px;
+    font-size: 1.5rem;
     text-align: center;
     color: #191c5f;
     border-bottom: 3px solid #F97316;
@@ -415,7 +419,7 @@ h3 {
 }
 
 .about-text p {
-    font-size: 20px;
+    font-size: 1.3rem;
     color: #191c5f;
     margin-bottom: 15px;
 }
@@ -508,7 +512,7 @@ h3 {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     padding: 20px;
     margin: 10px;
-    width: 300px;
+    width: 350px;
     flex: 0 0 auto;
     text-align: center;
     transition: transform 0.3s;
@@ -524,17 +528,16 @@ h3 {
 }
 
 .journey-icon img {
-    width: 80px;
-    height: auto;
+    max-width: 80px;
 }
 
 .journey-title {
-    font-size: 24px;
     margin-bottom: 10px;
+    font-size: 1.5rem;
 }
 
 .journey-description {
-    font-size: 16px;
+    font-size: 1.3rem;
 }
 
 /* Credible section  */
@@ -572,6 +575,10 @@ h3 {
     margin-bottom: 20px;
 }
 
+.benefits p {
+    margin-bottom: 0px;
+}
+
 .benefits {
     list-style: none;
     padding: 0;
@@ -580,7 +587,7 @@ h3 {
 }
 
 .benefits li {
-    font-size: 18px;
+    font-size: 20.8px;
     margin-bottom: 10px;
     display: flex;
     align-items: center;
@@ -630,17 +637,19 @@ h3 {
 }
 
 .support-text h2 {
-    font-size: 36px;
+    font-size: 1.75rem;
     color: #F97316;
     margin-bottom: 10px;
 }
 
 .support-text h1 {
-    color: #1E3A8A;
+    font-size: 2.5rem;
+    color: #191c5f;
     margin-bottom: 20px;
 }
 
 .support-text p {
+    font-size: 1.3rem;
     color: #191c5f;
     margin-bottom: 20px;
 }
@@ -667,7 +676,7 @@ h3 {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
-    gap: 30px;
+    gap: 20px;
 }
 
 .partner-card {
@@ -722,7 +731,6 @@ h3 {
 }
 
 .footer-about p {
-    font-size: 1rem;
     color: #c5d4ed;
 }
 
@@ -834,12 +842,10 @@ h3 {
 }
 
 .about-mission h3, .about-vision h3, .about-values h3 {
-    font-size: 2rem;
     color: #2563EB;
 }
 
 .about-mission p, .about-vision p, .about-values p {
-    font-size: 1.1rem;
     color: #6B7280;
     max-width: 800px;
     margin: 0 auto;
@@ -1079,4 +1085,3 @@ h3 {
             transform: translateX(calc(-100% - 20px)); 
         }
     }
-}
