--- a/css/style.css
+++ b/css/style.css
@@ -224,7 +224,7 @@ h3 {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    max-width: 1400px;
+    max-width: 1200px;
     color: #191c5f;
     width: 100%;
     flex-wrap: nowrap;
@@ -249,6 +249,7 @@ h3 {
 .hero-text h2 {
     font-size: 1.75;
     color: #F97316;
+    padding: 4px;
     text-align: center;
     border: 2px dashed #191c5f;
     margin-bottom: 20px;
@@ -971,7 +972,7 @@ h3 {
     } */
 
     .hero-text h1 {
-        font-size: 30px;
+        font-size: 2.5rem;
     }
 
     .hero-text {
@@ -980,11 +981,11 @@ h3 {
     }
 
     .hero-text h2 {
-        font-size: 28px;
+        font-size: 1.75rem;
     }
 
     .hero-text p {
-        font-size: 16px;
+        font-size: 1.3rem;
     }
 
     .hero-content {
