--- a/css/style.css
+++ b/css/style.css
@@ -776,7 +776,7 @@ h3 {
 .footer-newsletter form {
     display: flex;
     flex-direction: column;
-    width: 146px;
+    width: 230px;
 }
 
 .footer-newsletter input {
@@ -1004,6 +1004,35 @@ hr {
     padding: 20px 0;
     text-align: center;
 }
+
+#ScrollToTopBtn {
+    display: none; 
+    position: fixed; 
+    bottom: 20px; 
+    right: 30px;
+    z-index: 99; 
+    border: none;
+    outline: none; 
+    background-color: #c5d4ed; 
+    color: white; /* Text color */
+    cursor: pointer; /* Add a mouse pointer on hover */
+    padding: 10px; /* Some padding */
+    border-radius: 50%; /* Rounded corners for circular design */
+    font-size: 18px; 
+    box-shadow: inset 3px 3px 6px #f7f7f7, inset -3px -3px 6px #2563EB;
+    transition: all 0.3s ease; /* Smooth transitions */
+}
+
+#ScrollToTopBtn img {
+    max-width: 30px;
+    height: auto;
+}
+
+#ScrollToTopBtn:hover {
+    background-color: #c5d4ed; /* Darker background on hover */
+    box-shadow: inset 3px 3px 6px #2563EB, inset -3px -3px 6px #c5d4ed;
+}
+
 
 @keyframes scroll-left {
     0% {
@@ -1238,6 +1267,10 @@ hr {
     .footer-about p {
         color: #c5d4ed;
         margin-bottom: 20px;
+    }
+    
+    .footer-newsletter form {
+        width: 146px;
     }
 
 
