--- a/css/style.css
+++ b/css/style.css
@@ -1022,7 +1022,8 @@ hr {
     padding: 10px; 
     border-radius: 50%;
     font-size: 18px; 
-    box-shadow: inset 3px 3px 6px #f7f7f7, inset -3px -3px 6px #2563EB;
+    box-shadow: inset 0 20px 10px rgba(197,212,237, 0.2),
+                0 10px 10px rgba(37,99,235, 0.4);
     transition: all 0.3s ease; 
 }
 
@@ -1033,7 +1034,8 @@ hr {
 
 #ScrollToTopBtn:hover {
     background-color: #c5d4ed; /* Darker background on hover */
-    box-shadow: inset 3px 3px 6px #2563EB, inset -3px -3px 6px #c5d4ed;
+    box-shadow: inset 3px 3px 3px #2563EB,
+                 2px 2px 3px #c5d4ed;
 }
 
 /* Flexbox container to center content */
