--- a/css/style.css
+++ b/css/style.css
@@ -67,40 +67,43 @@ h3 {
     width: 100%;
     font-size: 1.3rem;
     background: #c5d4ed;
-    padding: 2px 150px;
+    padding: 10px 20px;
     border-radius: 50px;
     justify-content: space-between;
     align-items: center;
     z-index: 100; 
-    
 }
 
 .header-logo img {
     max-width: 120px;
+    display: block;
 }
 
 .header-links ul {
     list-style: none;
-    padding: 10px;
-    margin: 0 20px;
+    padding: 0px;
+    margin: 0;
+    display: flex;
+    align-items: center;
     border-radius: 50px;
 }
 
 .header-links ul li {
-    display: inline-block;
+    display: flex;
     margin: 0 15px;
+    align-items: center;
     border-radius: 50px;
 }
 
 .header-links ul li a {
-    position: relative;
-    display: flex;
+    /* position: relative; */
+    /* display: flex; */
     font-size: 1.3rem;
     color: #191c5f;;
     border-radius: 20px;
     font-weight: 700;
     text-decoration: none;
-    margin-left: 40px;
+    /* margin-left: 40px */
 }
 
 .header ul{
@@ -1033,7 +1036,7 @@ hr {
 }
 
 #ScrollToTopBtn:hover {
-    background-color: #c5d4ed; /* Darker background on hover */
+    background-color: #c5d4ed;
     box-shadow: inset 3px 3px 3px #2563EB,
                  2px 2px 3px #c5d4ed;
 }
